Updating downloads page

--- a/website/site/layouts/partials/hero.html
+++ b/website/site/layouts/partials/hero.html
@@ -9,7 +9,7 @@
                 Keep everything and everyone on track, all in the Mattermost platform.
 			</p>
 
-            <button class='btn btn-primary btn-xl'>Get started</button>
+            <a href="https://mattermost.com/sign-up-fb/?utm_source=focalboard&utm_campaign=focalboard" target='_blank'><button class='btn btn-primary btn-xl'>Get started</button></a>
 
             <div class='homepage-intro__github'><i class="fa fa-star"></i> Over 13k stars on <a target='_blank' href="https://github.com/mattermost/focalboard" class='mx-1 text-white'>GitHub</a> and counting!</div>
 		</div>
