--- a/website/site/static/css/partials/homepage.css
+++ b/website/site/static/css/partials/homepage.css
@@ -309,39 +309,25 @@
 }
 
 .homepage__threecol {
+    margin-top: 100px;
     gap: 24px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
-.homepage__threecol .threecol__image {
-    margin-bottom: 2.9rem;
+@media (max-width: 992px) {
+    .homepage__threecol {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 .homepage__threecol h4 {
-    margin-bottom: 2rem;
+    margin: 2rem 0;
     font-weight: 700;
 }
 
 @media (max-width: 1280px) {
     .homepage__threecol {
         flex-wrap: wrap;
-    }
-}
-
-@media (min-width: 768px) {
-    .homepage__threecol .threecol__single {
-        flex: 0 0 calc(33.33% - 3rem);
-        max-width: 33.33%;
-    }
-    .homepage__threecol p {
-        max-width: 27.5rem;
-    }
-}
-
-@media (min-width: 1200px) {
-    .homepage__threecol .threecol__single {
-        flex: 0 0 270px;
     }
 }
