Fixing a linting error

--- a/webapp/src/components/blocksEditor/editor.scss
+++ b/webapp/src/components/blocksEditor/editor.scss
@@ -15,7 +15,7 @@
 
     input {
         width: 100%;
-        border: 0px;
+        border: 0;
         border-radius: 4px;
         padding: 3px 6px;
         outline: 0;
