Updating intro text

--- a/website/site/layouts/partials/intro.html
+++ b/website/site/layouts/partials/intro.html
@@ -122,18 +122,18 @@
     <div class="container-fluid">
         <h2>Feature Highlights</h2>
         <div class='feature-bullets'>
-            <div>Card attachments</div>
+            <div>Unlimited boards</div>
             <div>Group, filter, and sort tasks</div>
             <div>File sharing</div>
-            <div>Multi-team views</div>
+            <div>Unlimited custom attributes</div>
             <div>Customizable templates</div>
             <div>Meeting notes</div>
             <div>Project cards & tasks</div>
             <div>Archiving & back-up snapshots</div>
             <div>Priority labeling</div>
-            <div>Unlimited custom attributes</div>
-            <div>Messaging and meeting integrations</div>
             <div>User permissions</div>
+            <div>Team and direct messaging</div>
+            <div>Multi-team views</div>
         </div>
     </div>
 </div>
