--- a/website/site/layouts/partials/hero.html
+++ b/website/site/layouts/partials/hero.html
@@ -3,7 +3,7 @@
 		<div class="homepage-intro__text" data-aos="fade-left">
             <div class="focalboard-tag">Focalboard is now Mattermost Boards <img src="img/bullseye.svg" alt=""></div>
 			<h1>
-				Open source project management for <span style='color: #ffbc1f'>developers</span>
+				Open source <br> project management for <span style='color: #ffbc1f'>technical teams</span>
 			</h1>
 			<p>
                 Keep everything and everyone on track, all in the Mattermost platform.
