--- a/website/site/layouts/partials/intro.html
+++ b/website/site/layouts/partials/intro.html
@@ -172,7 +172,7 @@
             <img src="img/3d-icons/firstbump.svg" alt="Fistbump Icon">
             <h2>What’s next for Boards</h2>
             <p>
-                Here are some things that we have on our <a href="https://community.mattermost.com/plugins/focalboard/team/qghzt68dq7bopgqamcnziq69ao/shared/b4ctmm917q3rzdfi451qtuxjzcw/vsyng4ghehbgsmp7gxfxk81bxxa?r=k995q65fg14cop75s8wkzxr76cc" target="_blank">roadmap</a> and plan to release soon!
+                Here are some things that we have on our roadmap and plan to release soon!
             </p>
             <div class="view-tabs">
                 <button class='btn btn-yellow btn-lg' x-bind:class="{ 'active': roadmapItem == 1 }" @click='roadmapItem = 1, clearInterval(roadmapInterval)'>Standard Properties</button>
