--- a/webapp/src/components/standardProperties/statusProperty/editableLabel/editableLabel.scss
+++ b/webapp/src/components/standardProperties/statusProperty/editableLabel/editableLabel.scss
@@ -1,9 +1,10 @@
-.Label {
+.EditableLabel {
     input {
         border: none;
         background: none;
         border-bottom: 1px solid;
         border-radius: 0;
         max-width: 100%;
-      }
+        text-transform: uppercase;
+    }
 }
