--- a/webapp/src/components/standardProperties/statusProperty/editStatusDialog.scss
+++ b/webapp/src/components/standardProperties/statusProperty/editStatusDialog.scss
@@ -98,6 +98,7 @@
                 .colorEditor {
                     margin-right: 4px;
                     margin-left: 4px;
+                    cursor: pointer;
 
                     &.editing {
                         display: block;
