--- a/webapp/src/components/standardProperties/statusProperty/editableLabel/editableLabel.scss
+++ b/webapp/src/components/standardProperties/statusProperty/editableLabel/editableLabel.scss
@@ -1,6 +1,6 @@
 .EditableLabel {
     input {
-        border: none;
+        border: 0;
         background: none;
         border-bottom: 1px solid;
         border-radius: 0;
