--- a/webapp/src/components/table/table.scss
+++ b/webapp/src/components/table/table.scss
@@ -11,9 +11,9 @@
         display: flex;
         flex-shrink: 0;
         align-items: center;
-        height: 50px;
+        height: 44px;
         margin-right: 15px;
-        margin-top: 15px;
+        // margin-top: 15px;
         vertical-align: middle;
         border-bottom: solid 1px rgba(var(--center-channel-color-rgb), 0.08);
 
