--- a/webapp/src/components/sidebar/sidebarCategory.scss
+++ b/webapp/src/components/sidebar/sidebarCategory.scss
@@ -7,7 +7,7 @@
     }
 
     .Dialog {
-        color: rgba(var(--center-channel-color-rgb))
+        color: rgba(var(--center-channel-color-rgb));
     }
 
     .octo-sidebar-item {
