MM-54013- Removing some mattermost references

--- a/website/site/layouts/partials/footer.html
+++ b/website/site/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer aria-label="Mattermost Footer" class="site-footer">
+{{/*  <footer aria-label="Mattermost Footer" class="site-footer">
     <div class="container">
         <div id="footer-logo">
             <img src="/img/footer-logo.svg" alt="Mattermost Footer Logo" />
@@ -92,7 +92,7 @@
                             href="https://mattermost.com/trial/">Enterprise Trial License</a></li>
                     <li id="menu-item-27090"
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-27090"><a
-                            href="https://mattermost.com/sign-up-fb/?utm_source=focalboard&utm_campaign=focalboard">Cloud Trial</a></li>
+                            href="https://github.com/mattermost/focalboard">Cloud Trial</a></li>
                 </ul>
             </li>
         </ul>
@@ -179,6 +179,23 @@
                 </a>
             </li>
         </ul>
+    </div>
+</footer>  */}}
+
+<footer class='py-5'>
+    <div class="container">
+        <div class='d-flex justify-content-between'>
+            <a href="/"><img class='header__logo' src="/img/logo.svg?version=v2" alt="Logo" width="180"></a>
+            <div>
+                <a href="https://github.com/mattermost/focalboard#readme-ov-file" target='_blank'>
+                    Read me
+                </a>
+                |
+                <a href="https://github.com/mattermost/focalboard/blob/main/LICENSE.txt" target='_blank'>
+                    License
+                </a>
+            </div>
+        </div>
     </div>
 </footer>
 
