--- a/website/site/layouts/partials/intro.html
+++ b/website/site/layouts/partials/intro.html
@@ -17,7 +17,7 @@
             <img src="img/3d-icons/rocket.svg" alt="Rocket Icon">
             <h2>Accelerate productivity</h2>
             <p>
-                Centralize, plan, and track all your work in one place. Mattermost Boards helps your organization maintain a single source of truth, so your teams stay aligned to complete tasks, reach milestones, and achieve their goals.
+                Centralize, plan, and track all your work in one place. Focalboard helps your organization maintain a single source of truth, so your teams stay aligned to complete tasks, reach milestones, and achieve their goals.
             </p>
         </div>
         <div class="section-half__visual" data-aos="fade-left">
@@ -155,9 +155,9 @@
     <div class="section-half__container">
         <div data-aos="fade-left">
             <img src="img/3d-icons/development.svg" alt="Open source Icon">
-            <h2>Mattermost Boards is 100% open source</h2>
+            <h2>Focalboard is 100% open source</h2>
             <p>
-                Mattermost Boards is an open source alternative to tools like Asana, Trello, and Notion. Check out the <a target='_blank' href="https://github.com/mattermost/focalboard">source code on GitHub</a>, and contribute to the future of this project. Join the discussion on the <a href="https://community.mattermost.com/core/channels/focalboard" target="_blank">Mattermost community</a> to interact with other Mattermost and Focalboard contributors and users.
+                Focalboard is an open source alternative to tools like Asana, Trello, and Notion. Check out the <a target='_blank' href="https://github.com/mattermost/focalboard">source code on GitHub</a>, and contribute to the future of this project. Join the discussion on the <a href="https://community.mattermost.com/core/channels/focalboard" target="_blank">Mattermost community</a> to interact with other Mattermost and Focalboard contributors and users.
             </p>
         </div>
         <div class="section-half__visual" data-aos="fade-right">
@@ -166,7 +166,7 @@
     </div>
 </div>
 
-<div class='section-half roadmap-section'>
+{{/*  <div class='section-half roadmap-section'>
     <div class="section-half__container">
         <div data-aos="fade-left">
             <img src="img/3d-icons/firstbump.svg" alt="Fistbump Icon">
@@ -189,7 +189,7 @@
             x-show='roadmapItem == 3' src="img/roadmap/analytics.png" alt="Analytics and Reporting Image" width='800px'>
         </div>
     </div>
-</div>
+</div>  */}}
 
 <div class="help-section" data-aos="fade-up">
     <div class='section-half'>
@@ -199,7 +199,7 @@
                 <p>
                     We have tons of documentation to help you make the most out of boards, head over to our documentation site to learn more about boards.
                 </p>
-                <a href='https://docs.mattermost.com/guides/boards.html' target='_blank'>
+                <a href='https://github.com/mattermost/focalboard/#readme' target='_blank'>
                     <button class='btn btn-primary btn-xl'>
                         <span>Go to docs</span>
                         <img src="img/arrow-right.svg" alt="Arrow right">
