Updating links and text

--- a/website/site/layouts/partials/intro.html
+++ b/website/site/layouts/partials/intro.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="template-picker-item" x-bind:class="{ 'active': template == 6 }" @click='template = 6'>
                     <span class='template-picker-item__emoji'>👋</span>
-                    <span class='template-picker-item__title'>Welcome to Boards</span>
+                    <span class='template-picker-item__title'>Welcome to Focalboard</span>
                 </div>
             </div>
             <div class="template-picker__preview">
@@ -98,7 +98,7 @@
                 <img x-cloak x-transition.duration.500 x-show='template == 3' src="img/templates/company-goals.png" alt="Company Goals Template">
                 <img x-cloak x-transition.duration.500 x-show='template == 4' src="img/templates/roadmap.png" alt="Roadmap Template">
                 <img x-cloak x-transition.duration.500 x-show='template == 5' src="img/templates/meeting-agenda.png" alt="Meeting Agenda Template">
-                <img x-cloak x-transition.duration.500 x-show='template == 6' src="img/templates/welcome.png" alt="Welcome to Boards Template">
+                <img x-cloak x-transition.duration.500 x-show='template == 6' src="img/templates/welcome.png?version=v2" alt="Welcome to Boards Template">
             </div>
         </div>
     </div>
@@ -184,7 +184,7 @@
             <div>
                 <h2>Need help?</h2>
                 <p>
-                    We have tons of documentation to help you make the most out of boards, head over to our documentation site to learn more about boards.
+                    We have tons of documentation to help you make the most out of focalboard, head over to our documentation site to learn more about focalboard.
                 </p>
                 <a href='https://github.com/mattermost/focalboard/#readme' target='_blank'>
                     <button class='btn btn-primary btn-xl'>
