--- a/webapp/src/components/sidebar/sidebar.scss
+++ b/webapp/src/components/sidebar/sidebar.scss
@@ -28,7 +28,7 @@
             margin: auto;
         }
 
-        .octo-sidebar-list {
+        .octo-sidebar-header {
             padding-left: 10px !important;
         }
     }
